--- a/src/main/resources/templates/logoutPage.html
+++ b/src/main/resources/templates/logoutPage.html
@@ -24,7 +24,7 @@
         <br>
       </h1>
       <h1 class="lead">You have successfully logged out</h1>
-      <a th:href="@{/demo/login}">Back to login page</a>
+      <a th:href="@{/demo}">Back to login page</a>
     </main>
 
     <!--<footer class="footer">
