--- a/src/main/resources/templates/signin.html
+++ b/src/main/resources/templates/signin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" th:href="@{/images/icon.ico}">
 
-    <title>Login</title>
+    <title>Welcome to timeline</title>
 
     <!-- Bootstrap core CSS -->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
